--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <h2><span>S</span>aharukh.</h2>
+                <h2><span>S</span>aharukh</h2>
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -23,7 +23,7 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <h1>Hi, I am <span>Saharukh </span><br>Shaikh From India</h1>
+                <h1>Hi, I am <span>Saharukh </span><br>Shaikh from India.</h1>
             </div>
         </div>
     </div>
