--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <h1>Hi, I am <span>Saharukh </span><br>Shaikh from India.</h1>
+                <h1>Hi, I am <span>Saharukh </span>Shaikh</h1>
+                <h3>A Web Designer and Developer</h3>
             </div>
         </div>
     </div>
