new lines added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </nav>
             <div class="header-text">
                 <h1>Hi, I am <span>Saharukh </span>Shaikh</h1>
-                <h3>A Web Designer and Developer</h3>
+                <h3>Product Designer | Web Developer | UI\UX Designer</h3>
             </div>
         </div>
     </div>
