new lines added again

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </nav>
             <div class="header-text">
                 <h1>Hi, I am <span>Saharukh </span>Shaikh</h1>
-                <h3>Product Designer | Web Developer | UI\UX Designer</h3>
+                <h3>Product Designer | Web Designer & Developer | Data Analyst</h3>
             </div>
         </div>
     </div>
@@ -39,7 +39,7 @@
                 </div>
                 <div class="about-col-2">
                     <h1>About Me</h1>
-                    <p>Welcome to my creative corner! I'm Saharukh Shaikh a passionate UI/UX designer and Web & Mobile Application Designer committed to crafting seamless and visually appealing digital experiences. With a blend of artistic flair and technical expertise, I thrive on transforming complex ideas into user-friendly designs.</p>
+                    <p>Welcome to my creative corner! I'm Saharukh Shaikh a passionate Product designer and Web & Mobile Application Designer committed to crafting seamless and visually appealing digital experiences. With a blend of artistic flair and technical expertise, I thrive on transforming complex ideas into user-friendly designs.</p>
 
                     <div class="tab-titles">
                         <p class="tab-links active-links" onclick="opentab('skills')">Skills</p>
@@ -48,13 +48,14 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>UI/UX</span><br>Designing Web/App interfaces</li>
+                            <li><span>Product Designer</span><br>Designing End to End Web/App interfaces</li>
                             <li><span>Wed & App Development</span><br>Wed App Development</li>
                             <li><span>Analyst</span><br>Data Analyst</li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
                         <ul>
+                            <li><span>2024-Present</span><br>Product Designer | Web Designer & Developer</li>
                             <li><span>2022-2023</span><br>Web Developer Trainee</li>
                             <li><span>2020-2022</span><br>Research Analyst</li>
                             <li><span>2019</span><br>Analyst</li>
@@ -90,7 +91,7 @@
                 </div>
                 <div>
                     <i class="fa-brands fa-app-store-ios"></i>
-                    <h2>Analyst</h2>
+                    <h2>Data Analyst</h2>
                     <p>Analyst with a track record of streamlining processes. Expertise in analyzing and enhancing IT systems for optimal performance. Collaborative problem solver dedicated to continuous improvement.</p>
                     <a href="#portfolio">Learn More</a>
                 </div>
